--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,29 +1,6 @@
 <h1>Create an article</h1>
 
-<% if @article.errors.any? %>
-<ul>
-    <h2>The following errors prevented the article from getting created</h2>
-    <% @article.errors.full_messages.each do |msg| %>
+<%= render 'form' %>
 
-  <li><%= msg %></li>
-  <% end %>
-</ul>
 
-<% end %>
-
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br/>
-    <%=f.text_area :description %>
-    
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
     
