--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Dit is de blog homepage!</h1>
-
-<%= link_to "Alpha Blog", articles_path %> | <%=  link_to "naar de about pagina", about_path %>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "sign up now", "#", class: "btn btn-primary btn-lg" %>
+</div>  
