--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,8 +41,17 @@ $navbar-default-bg: #08088A;
 .description {
   margin-top: 0;
 }
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
   
-  
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
 
 footer {
   margin-top: 45px;
