--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,13 @@
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
           <li class="article-title">
             <%= link_to user.username, user_path(user) %></li>
-          <li><small><%= pluralize(user.articles.count, "article") if user.articles %>
-          </small></li> 
+            <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+            <% if logged_in? and current_user.admin? %>
+              <li><%= link_to "Delete this user", user_path(user), method: :delete,
+                  data: { confirm: "are you sure you want to delete the user and all their articles?" } %>
+              </li>
+            <% end %>
+           
         </div>
       </div>
     </ul>
