--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,7 +36,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "All categories", categories_path %></li>
             <% Category.all.each do |category| %>
-              <li><%= link_to "#{category.name}", categories_path(category) %></li>
+              <li><%= link_to "#{category.name}", category_path(category) %></li>
             <% end %>
             <% if logged_in? and current_user.admin? %>
               <li role="separator" class="divider"></li>
